Add disabled states to inputs

--- a/prototypes/map.html
+++ b/prototypes/map.html
@@ -121,7 +121,7 @@
     </div> 
 
     <!-- Advanced Search and Subheader - Note: Had to be moved and restructured -->
-    <div class="subhead expanded">
+    <div class="subhead">
         <div class="subhead-mask">
             <div class="subhead-inner">
                 <div class="advanced-search">
@@ -133,7 +133,7 @@
                                     <span class="slider-label">Diameter</span>
                                     <span>1in</span><input type="text" value="" data-slider-min="1" data-slider-max="60" data-slider-step="1" data-slider-value="[1,60]" id="diameter-slider" class="slider"><span>60in</span>
                                 </div>
-                                <div class="slider-row">
+                                <div class="slider-row disabled">
                                     <span class="slider-label">Plot Size</span>
                                     <span>1ft</span><input type="text" value="" data-slider-min="1" data-slider-max="15" data-slider-step=".5" data-slider-value="[1,15]" id="plotsize-slider" class="slider"><span>15ft</span>
                                 </div>
@@ -153,7 +153,7 @@
                                     <input type="checkbox" name="show-rain-gardens" id="show-rain-gardens" /><label for="show-rain-gardens">Show rain gardens</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" name="show-turf-gardens" id="show-turf-gardens" /><label for="show-turf-gardens">Show turf/concrete gardens</label>
+                                    <input type="checkbox" name="show-turf-gardens" id="show-turf-gardens" class="disabled" /><label for="show-turf-gardens">Show turf/concrete gardens</label>
                                 </span>
                             </div>
                             <div class="span3">
@@ -165,7 +165,7 @@
                                     <input type="checkbox" name="missing-species" id="missing-species" /><label for="missing-species">Show missing species</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" name="missing-photos" id="missing-photos" /><label for="missing-photos">Show missing photos</label>
+                                    <input type="checkbox" name="missing-photos" id="missing-photos" class="disabled" /><label for="missing-photos">Show missing photos</label>
                                 </span>
                             </div>
                         </div>
