Update logos, remove old versions

--- a/prototypes/map.html
+++ b/prototypes/map.html
@@ -85,7 +85,7 @@
     <!-- Logo and Search -->
     <div class="header">
         <div class="logo">
-          <a href=""><img id="site-logo" src="static/img/logo-beta.png" alt="OpenTreeMap"></a>
+          <a href=""><img id="site-logo" src="static/img/logo.png" alt="OpenTreeMap"></a>
         </div>
         <div class="search-wrapper">
             <div class="search-block-wrapper">
