Markup is right

--- a/prototypes/map.html
+++ b/prototypes/map.html
@@ -292,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div id="sidebar-add-tree" class="hidden">
+            <div id="sidebar-add-tree">
                 <div class="sidebar-inner">
                     <a href="javascript:;" class="close cancelBtn small">×</a>
                     <h3 >Add a Tree</h3>
@@ -358,7 +358,7 @@
                     </div>
                 </div>
             </div>
-            <div id="sidebar-add-resource">
+            <div id="sidebar-add-resource" class="hidden">
                 <div class="sidebar-inner">
                     <a href="javascript:;" class="close cancelBtn small">×</a>
                     <h3 >Add a Resource</h3>
