--- a/prototypes/_template.html
+++ b/prototypes/_template.html
@@ -22,8 +22,8 @@
 <div class="wrapper">
     <!-- Top Nav -->
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <ul class="nav pull-left">
+        <div class="collapse navbar-collapse" id="otm-navbar-collapse">
+          <ul class="nav navbar-nav navbar-left">
               <li class="add-menu dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown"><i class="icon-plus-circled"></i></a>
                   <ul class="dropdown-menu">
@@ -34,7 +34,7 @@
               <li><a>Explore Trees</a></li>
               <li><a>View Edits</a></li>
           </ul>
-          <ul class="nav pull-right">
+          <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown">My Tree Map</a>
                   <ul class="dropdown-menu">
@@ -52,17 +52,17 @@
 
     <!-- NEW! User Dock, showing quick information about "My Profile" -->
     <div class="user-dock">
-        <div class="row-fluid">
-            <div class="span1">
-                <a><img src="static/img/profile.png" class="user-img"></a>
+        <div class="row">
+            <div class="col-sm-1">
+                <a><img src="static/img/profile.png" class="user-img" style="max-width: 100%;"></a>
             </div>
-            <div class="span3">
+            <div class="col-sm-3">
                 <h2>administrator</h2>
                 <h4>Administrative User</h4>
                 <a class="btn btn-primary">Edit Profile</a>
                 <a class="btn">Logout</a>
             </div>
-            <div class="span4">
+            <div class="col-sm-4">
                 <label>My Tree Maps <a class="pull-right">View All Maps</a></label>
                 <ul>
                     <li><a>testmap</a> <span>Owner</span></li>
@@ -70,7 +70,7 @@
                     <li><a>testmap</a> <span>User</span></li>
                 </ul>
             </div>
-            <div class="span4">
+            <div class="col-sm-4">
                 <label>My Recent Contributions <a class="pull-right">View All Edits</a></label>
                 <ul>
                     <li>Updated <a>species</a> on <a>plot 226234</a></li>
@@ -127,12 +127,28 @@
 
     <!-- Subheader with Counts -->
     <div class="subhead hidden">
-        <div style="display: inline;" id="tree-and-planting-site-counts">
-            <span id="tree-count">4567</span> trees, <span id="planting-site-count">10,683</span> planting sites
+        <div class="advanced-search">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                    </div>
+                    <div class="col-md-3" id="display-filters" data-search-type="IN" data-search-identifier="mapFeature.feature_type">
+                        <h4>Display Filters</h4>
+                    </div>
+                    <div class="col-md-3" id="missing-data">
+                        <h4>Missing Data</h4>
+                    </div>
+                </div>
+            </div>
         </div>
-        <a href="javascript:;" class="btn btn-primary btn-mini exportBtn" id="exportbutton"><i class="icon-export"></i> Export Search Results</a>
-        <a class="btn btn-primary addBtn"><i class="icon-plus"></i> Add a Tree</a>
-    </div>   
+        <div class="stats-bar">
+            <div style="display: inline;" id="tree-and-planting-site-counts">
+                <span id="tree-count">4567</span> trees, <span id="planting-site-count">10,683</span> planting sites
+            </div>
+            <a href="javascript:;" class="btn btn-primary btn-xs exportBtn" id="exportbutton"><i class="icon-export"></i> Export Search Results</a>
+            <a class="btn btn-primary addBtn"><i class="icon-plus"></i> Add a Tree</a>
+        </div>
+    </div>
  
     <!-- Background Image for Interior Pages -->
     <div class="image-background hidden"></div>
@@ -142,14 +158,13 @@
 <!-- Footer -->
 <footer>
     <div class="footer-inner">
-        <ul class="inline pull-left">
+        <ul class="list-inline pull-left">
             <li><a>Tree Key</a></li>
             <li><a>Resources</a></li>
             <li><a>FAQ</a></li>
             <li><a>About</a></li>
             <li><a>Contact</a></li>
         </ul>
-        <a href="javascript:;" class="pull-right partners">Partners</a>
     </div>
 </footer>
     
