--- a/prototypes/modeling.html
+++ b/prototypes/modeling.html
@@ -16,6 +16,7 @@
     
     -->
     <link href="static/css/vendor.css" rel="stylesheet">
+    <link href="css/slider.css" rel="stylesheet">
     <link href="static/css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +33,7 @@
                   </ul>
               </li>
               <li><a>Explore Trees</a></li>
-              <li class="dropdown">
+              <li class="dropdown active">
                   <a class="dropdown-toggle" data-toggle="dropdown">Planting Simulations</a>
                   <ul class="dropdown-menu">
                       <li><a>Explore & Model Trees</a></li>
@@ -136,10 +137,10 @@
                     <div id="layers" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <div class="panel-group" id="accordion-inner">
-                                <div class="panel panel-default">
+                                <div class="panel panel-default layer-group">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" href="#biodiversity">
+                                            <a data-toggle="collapse" href="#biodiversity" class="collapsed">
                                                 Biodiversity
                                             </a>
                                         </h4>
@@ -159,18 +160,27 @@
                                     </div>
                                 </div>
 
-                                <div class="panel panel-default">
+                                <div class="panel panel-default layer-group">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" href="#socioeconomic">
+                                            <a data-toggle="collapse" href="#socioeconomic" class="collapsed">
                                                 Socioeconomic
                                             </a>
+                                            <input class="slider" type="text" value="0" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0" />
                                         </h4>
                                     </div>
                                     <div id="socioeconomic" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <div class="layer">
-                                                Home Ownership
+                                                <h4>Home Ownership</h4>
+                                                <div class="row">
+                                                    <div class="col-sm-10">
+                                                        <input class="slider" type="text" value="0" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0" />
+                                                    </div>
+                                                    <div class="col-sm-2">
+                                                        <div class="layer-value">0</div>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="layer">
                                                 Property Value
@@ -191,14 +201,14 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#masks">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#masks" class="collapsed">
                                 Masks
                             </a>
                         </h4>
                     </div>
                     <div id="masks" class="panel-collapse collapse">
                         <div class="panel-body">
-                            
+                            masks!
                         </div>
                     </div>
                 </div>
@@ -220,11 +230,19 @@
 -->
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-slider.js"></script>
 <script>
     // Just adds dropdowns to navbar, user-dock
     $('.dropdown-toggle').dropdown();
     $('.user-img').on('click', function() {
         $('.user-dock').toggleClass('active');
+    });
+
+    $('.slider').slider({
+        value: 0    
+    }).on('slide', function(e) {
+        var value = $(this).slider('getValue');
+        $(this).closest('.layer').find('.layer-value').text(value[0].value);
     });
 </script>
 </body>
